// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState Full height 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-empty-state pf-m-lg pf-m-full-height"
  >
    <div
      class="pf-v6-c-empty-state__content"
    >
      <div
        class="pf-v6-c-empty-state__header"
      >
        <div
          class="pf-v6-c-empty-state__title"
        >
          <h1
            class="pf-v6-c-empty-state__title-text"
          >
            EmptyState large
          </h1>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmptyState Header with icon 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-empty-state__header"
  >
    <div
      class="pf-v6-c-empty-state__icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 448 512"
        width="1em"
      >
        <path
          d="M436 160c6.6 0 12-5.4 12-12v-40c0-6.6-5.4-12-12-12h-20V48c0-26.5-21.5-48-48-48H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h320c26.5 0 48-21.5 48-48v-48h20c6.6 0 12-5.4 12-12v-40c0-6.6-5.4-12-12-12h-20v-64h20c6.6 0 12-5.4 12-12v-40c0-6.6-5.4-12-12-12h-20v-64h20zm-228-32c35.3 0 64 28.7 64 64s-28.7 64-64 64-64-28.7-64-64 28.7-64 64-64zm112 236.8c0 10.6-10 19.2-22.4 19.2H118.4C106 384 96 375.4 96 364.8v-19.2c0-31.8 30.1-57.6 67.2-57.6h5c12.3 5.1 25.7 8 39.8 8s27.6-2.9 39.8-8h5c37.1 0 67.2 25.8 67.2 57.6v19.2z"
        />
      </svg>
    </div>
    <div
      class="pf-v6-c-empty-state__title"
    >
      <h1
        class="pf-v6-c-empty-state__title-text"
      >
        Empty state
      </h1>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmptyState Main 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-empty-state"
  >
    <div
      class="pf-v6-c-empty-state__content"
    >
      <div
        class="pf-v6-c-empty-state__header"
      >
        <div
          class="pf-v6-c-empty-state__title"
        >
          <h1
            class="pf-v6-c-empty-state__title-text"
          >
            HTTP Proxies
          </h1>
        </div>
      </div>
      <div
        class="pf-v6-c-empty-state__body"
      >
        Defining HTTP Proxies that exist on your network allows you to perform various actions through those proxies.
      </div>
      <div
        class="pf-v6-c-empty-state__footer"
      >
        <div
          class="pf-v6-c-empty-state__actions"
        >
          <button
            aria-disabled="false"
            class="pf-v6-c-button pf-m-primary"
            data-ouia-component-id="OUIA-Generated-Button-primary-1"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              New HTTP Proxy
            </span>
          </button>
        </div>
        <div
          class="pf-v6-c-empty-state__actions"
        >
          <button
            aria-disabled="false"
            aria-label="learn more action"
            class="pf-v6-c-button pf-m-link"
            data-ouia-component-id="OUIA-Generated-Button-link-1"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Learn more about this in the documentation.
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmptyState Main variant large 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-empty-state pf-m-lg"
  >
    <div
      class="pf-v6-c-empty-state__content"
    >
      <div
        class="pf-v6-c-empty-state__header"
      >
        <div
          class="pf-v6-c-empty-state__title"
        >
          <h1
            class="pf-v6-c-empty-state__title-text"
          >
            EmptyState large
          </h1>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmptyState Main variant small 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-empty-state pf-m-sm"
  >
    <div
      class="pf-v6-c-empty-state__content"
    >
      <div
        class="pf-v6-c-empty-state__header"
      >
        <div
          class="pf-v6-c-empty-state__title"
        >
          <h1
            class="pf-v6-c-empty-state__title-text"
          >
            EmptyState small
          </h1>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmptyState Main variant xs 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-empty-state pf-m-xs"
  >
    <div
      class="pf-v6-c-empty-state__content"
    >
      <div
        class="pf-v6-c-empty-state__header"
      >
        <div
          class="pf-v6-c-empty-state__title"
        >
          <h1
            class="pf-v6-c-empty-state__title-text"
          >
            EmptyState extra small
          </h1>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
